fixed weird scroll right bug on mobile; made life page compatible with smaller phones

--- a/frontend/src/components/Carousel.css
+++ b/frontend/src/components/Carousel.css
@@ -1,10 +1,16 @@
+/* @media only screen and (max-width: 600px) {
+    .carousel {
+        width: 300px;
+        height: 200px;
+    }
+} */
+
 .arrow {
     position: absolute;
     width: 2rem;
     height: 2rem;
     color: white;
     filter: drop-shadow(0px 0px 5px #555);
-    z-index: 1000;
 }
 
 .arrow:hover {
@@ -14,12 +20,14 @@
 .arrow-left {
     left: 6rem;
     top: 85%;
+    z-index: 3;
 }
 
 .arrow-right {
     right: 6rem;
     top: 85%;
 }
+
 .carousel {
     position: relative;
     display: flex;
@@ -69,4 +77,17 @@
 
 .indicator-inactive {
     background-color: grey;
+}
+
+@media only screen and (max-width: 600px) {
+    .carousel {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .arrow-left, .arrow-right {
+        top: 120%; /* adjust this value as needed */
+    }
 }
